# iot-rpc-rest-app

./: .dockerignore  .env.template  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  compose.yaml  github.md  kernel-limits.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: agent-task.yml  bug_report.yml  feature_request.yml
.github/workflows/: build-and-push.yaml  copilot-setup-steps.yml
app-service/: .env.template  alembic.ini  create_api_app.py  create_page_app.py  main.py  prestart.sh  run_main.py
app-service/alembic/: env.py
app-service/alembic/versions/: 2025_08_23_1739-ec809f7d6f20_create_all_table.py  2025_08_24_1355-26ba52b91608_add_deleted_in_device_tasks_device.py  2025_08_24_1419-d5bbefccd315_fix_deleted_at_default_in_device_tasks_.py  2025_08_27_2140-d07752fb05ce_change_time_metrics_in_models_datetime_.py  2025_08_27_2234-aeffa06b7333_change_timefields_to_nullable.py  2025_08_27_2242-687afc463d15_change_timefields_to_nullable.py  2025_08_27_2254-51af51456b2c_change_timefields_to_nullable.py  2025_08_28_1252-44e5c360d1f8_change_timefields_to_int.py  2025_08_28_1315-01aa777e1e85_change_timefields_to_int.py  2025_09_01_1526-9e643fa8a7d8_add_dev_event.py  2025_09_01_1531-ddffc971adc2_add_dev_event.py  2025_09_02_1821-ca67ea23e0fd_add_dev_sn_uniq.py  2025_09_14_1446-d4aead72d80f_add_field_devtaskresult.py  2025_09_16_0046-9b9e7b582a61_add_org_deviceorgbind.py  2025_09_20_1604-27e956d5557d_add_fields_deviceconnection.py  2025_09_20_1628-663181cdb6c4_add_fields_deviceconnection_nullable_.py  2025_09_22_1155-b8e934e4ccaa_add_devicetag.py  2025_10_25_1052-10c52a60cbe2_repair.py  2025_10_25_1054-4ac4bc5f8f0e_add_devicegauge.py
app-service/api/: __init__.py
app-service/api/api_v1/: __init__.py  accounts.py  administrator.py  api_depends.py  billing.py  device_events.py  device_tasks.py  devices.py  gauges.py  legacy.py  postamat.py  webhook.py
app-service/config/: tags.py
app-service/core/: config.py  fs_broker.py  logging_config.py
app-service/core/crud/: administrator.py  billing_repo.py  cell.py  dev_events_repo.py  dev_tasks_repo.py  device_repo.py  postamat.py  webhook_repo.py
app-service/core/examples/: __init__.py  device_events_examples.py  webhook_examples.py
app-service/core/gunicorn/: app_options.py  application.py
app-service/core/integrations/: rmq_admin_api.py  webhooks.py  ya_leo4_cloud.py
app-service/core/middleware/: billing_counter.py
app-service/core/models/: __init__.py  base.py  billing.py  cell.py  common.py  const.py  db_helper.py  device_events.py  device_tasks.py  devices.py  orgs.py  postamat.py  webhook.py
app-service/core/schemas/: billing.py  cell.py  device_events.py  device_tasks.py  devices.py  legacy.py  postamat.py  rmq_admin.py  webhook.py
app-service/core/services/: billing.py  billing_publish.py  billing_utils.py  device_events.py  device_events_collect.py  device_task_processing.py  device_tasks.py  devices.py  legacy.py  postamat_service.py  rmq_admin.py
app-service/pages/: __init__.py  pg_default.py  pg_main.py  shared.py
app-service/tests/: conftest.py
app-service/utils/: pfx.py
device-emulator/: .dockerignore  Dockerfile  README.md  compose.yaml  device_emulator.py  requirements.txt
device-emulator/tests/: test_device_emulator.py
docker-files/app-service/: Dockerfile
docker-files/nginx-jwt/: Dockerfile  pre_work_Dockerfile
docker-files/nginx-mutual/: Dockerfile  ca_legacy.crt
docker-files/rmq/: compose.yaml
docs/: 1-task-workflow-doc.md  1.1 - mqtt-rpc-flow.md  2-events-api-format-description.md  3-webhooks.md  TTL.md  ai-agent-integration-guide.md  app_stack.md  client-cert-ssl-rmq-config.md  correlation-data-guide.md  deploy-plan.md  event-property-tags.md  event-protocol-mqtt.md  event-types-reference.md  get_pfx_b64.md  glossary.md  kernel-limits.md  links.md  method-codes-reference.md  mqtt-rpc-client-flow.md  mqtt-rpc-correlation-matrix.md  mqtt-rpc-protocol.md  mqtt5-paho-full-rpc-client-example.py  mqtt_topic_rules.md  notes.md  protocol.md  rpc-client-example.cs  rpc-client-native-correlation-example.cs  sequence.md  server-integration-guide-kotlin-spring.md  server-integration-guide.md  software-registration-abstract.md  solution-presentation.doc  solution-presentation.docx  solution-presentation.md  task-workflow-doc.md  task_states.md  webhooks.md
docs/exceptions/: github.md
examples/: mini-native-paho-mqttv5-corrdata-client.py  rpc-client-example.cs  rpc-client-example.py  rpc-client-extract-SN-from-cert-example.cs
examples/c-win-clion-rpc-client/: CMakeLists.txt  README.md
examples/c-win-clion-rpc-client/certificates/: ca_cert.pem
examples/c-win-clion-rpc-client/src/: cert_utils.c  cert_utils.h  config.h  device_client.c  device_client.h  main.c  message_handler.c  message_handler.h  openssl_applink.c
examples/csharp-net48-rpc-client/: .gitignore  App.config  DeviceClient.cs  DeviceRpcClient.csproj  Program.cs  README.md
mcp/: .env.example  .gitignore  README.md  pyproject.toml
mcp/docs/: architecture.md  deep-dive.md  marketing-overview.md  tools-reference.md
mcp/examples/: claude_desktop_config.json  curl_smoke_test.sh  cursor_mcp.json  vscode_mcp.json
mcp/leo4_mcp/: __init__.py  __main__.py  client.py  config.py  dry_run.py  prompts.py  resources.py  server.py  webhook_inbox.py
mcp/leo4_mcp/tools/: composite.py  events.py  tasks.py  webhooks.py
mcp/tests/: test_client.py  test_composite.py  test_tools_events.py  test_tools_tasks.py
nginx-configs/dev_leo4_ru/: default.conf  internal_ssl.conf  ssl.conf
nginx-configs/local-light/: nginx.conf  nginx.test.conf
nginx-configs/test/: default.conf
nginx/html/: index.html
ol-factory/: adm_ydb.py  fctry_part_data.py  gen_cert.py  gen_cert_dev_leo4.py  gen_certs_py.py  gen_rs256_pair_jwks_pem.py  post-box-burn.py  pyproject.toml  pyproject.toml.bak
rmq/: definitions.json  rabbitmq.conf  rabbitmq.conf.example
robotics/: README.md  marketing-overview.md  technical-research.md
(+20 files in other folders)
