[project]
name = "iot-rpc-rest-app"
version = "0.1.1"
description = "Iot Async-RPC Core app"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.5.8",
    "aiormq==6.9.2",
    "alembic==1.17.2",
    "apscheduler[sqlalchemy]>=3.11.1",
    "asyncpg>=0.31.0",
    "black>=25.11.0",
    "certifi==2025.11.12",
    "fast-depends==3.0.3",
    "fastapi==0.122.0",
    "fastapi-pagination>=0.15.0",
    "faststream>=0.6.3",
    "fastui==0.9.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "idna==3.11",
    "multidict==6.7.0",
    "orjson==3.11.4",
    "platformdirs==4.5.0",
    "pydantic-core==2.41.5",
    "pydantic-settings>=2.12.0",
    "pytokens==0.3.0",
    "sqlalchemy==2.0.44",
    "starlette==0.50.0",
    "uvicorn==0.38.0",
    "yarl==1.22.0",
]
