[project]
name = "iot-rpc-rest-app"
version = "0.1.1"
description = "Iot Async-RPC Core app"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.1",
    "aiormq>=6.9.3",
    "alembic>=1.18.4",
    "apscheduler[sqlalchemy]>=3.11.1",
    "asyncpg>=0.31.0",
    "black>=25.11.0",
    "certifi>=2026.2.25",
    "cryptography>=46.0.5",
    "fast-depends>=3.0.6",
    "fastapi>=0.135.1",
    "fastapi-pagination>=0.15.10",
    "faststream>=0.6.6",
    "fastui>=0.9.0",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "idna>=3.11",
    "multidict>=6.7.0",
    "orjson>=3.11.7",
    "platformdirs>=4.9.2",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.13.1",
    "pydeps>=3.0.2",
    "pytest>=9.0.2",
    "pytokens>=0.4.1",
    "sqlalchemy>=2.0.47",
    "starlette>=0.52.1",
    "tenacity>=9.1.4",
    "utils>=1.0.2",
    "uvicorn>=0.41.0",
    "yarl>=1.22.0",
]

[tool.pytest.ini_options]
testpaths = ["app-service/tests"]
markers = [
    "asyncio: compatibility alias for async tests executed via anyio",
    "anyio: mark a test as anyio-based",
]
norecursedirs = [
    ".git",
    ".idea",
    ".venv",
    "build",
    "dist",
    "node_modules",
    "examples/**/build",
    "examples/**/cmake-build-*",
    "examples/**/_deps",
]

