[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leo4-mcp"
version = "0.1.0"
description = "MCP server for LEO4 IoT platform"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]
webhook = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
leo4-mcp = "leo4_mcp.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
